added the first website

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first website</title>
+    <link rel="stylesheet" href="styles/rifaa.css">
+   
 </head>
 <body>
+    <div>
+        <h3>my first website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis nisi molestiae explicabo id, dolorum odio corrupti repellat nesciunt cupiditate quibusdam voluptatum deserunt tempore quidem distinctio laboriosam ea fuga dolore? Quasi!</p>
+    </div>
     
 </body>
 </html>
