addd the second and third wibsite

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         <h3>my first website</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis nisi molestiae explicabo id, dolorum odio corrupti repellat nesciunt cupiditate quibusdam voluptatum deserunt tempore quidem distinctio laboriosam ea fuga dolore? Quasi!</p>
     </div>
+    <div>
+        <h3>my second website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis nisi molestiae explicabo id, dolorum odio corrupti repellat nesciunt cupiditate quibusdam voluptatum deserunt tempore quidem distinctio laboriosam ea fuga dolore? Quasi!</p>
+    </div>
+    <div>
+        <h3>my third website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis nisi molestiae explicabo id, dolorum odio corrupti repellat nesciunt cupiditate quibusdam voluptatum deserunt tempore quidem distinctio laboriosam ea fuga dolore? Quasi!</p>
+    </div>
     
 </body>
 </html>
