--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <h3>my third website</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis nisi molestiae explicabo id, dolorum odio corrupti repellat nesciunt cupiditate quibusdam voluptatum deserunt tempore quidem distinctio laboriosam ea fuga dolore? Quasi!</p>
     </div>
+    <div>
+        <h3>how to push incrimental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
     
 </body>
 </html>
